<resources>
    <string name="app_name">Cesar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_monitor">MonitorActivity</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Developed by Jagat Deep Singh at University of Oslo with Supervisor Thomas Plagemann</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="pref_title_user">User Profile</string>

    <string name="key_profile_name">key_profile_name</string>
    <string name="title_profile_name">Name</string>

    <string name="key_profile_age">key_profile_age</string>
    <string name="title_profile_age">Age</string>

    <string name="key_profile_gender">key_profile_gender</string>
    <string name="title_profile_gender">Gender</string>

    <string name="key_profile_height">key_profile_height</string>
    <string name="title_profile_height">Height</string>

    <string name="key_profile_weight">key_profile_weight</string>
    <string name="title_profile_weight">Weight</string>

    <string name="pref_title_permission">Permissions</string>

    <string name="key_permission_storage">key_permission_storage</string>
    <string name="title_permission_storage">Access your Storage</string>
    <string name="summary_permission_storage">Grant access to internal/external storage</string>


</resources>
