<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_user">
        <Preference
            android:title="@string/title_profile_name"
            android:key="@string/key_profile_name"
            android:summary="Jagat Deep Singh"
            />

        <Preference
            android:title="@string/title_profile_age"
            android:key="@string/key_profile_age"
            android:summary="23"
            />

        <Preference
            android:title="@string/title_profile_gender"
            android:key="@string/key_profile_gender"
            android:summary="Male"
            />

        <Preference
            android:title="@string/title_profile_height"
            android:key="@string/key_profile_height"
            android:summary="183 cm"
            />

        <Preference
            android:title="@string/title_profile_weight"
            android:key="@string/key_profile_weight"
            android:summary="85 kg"
            />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_permission">

        <Preference
            android:title="@string/title_permission_storage"
            android:key="@string/key_permission_storage"
            android:summary="@string/summary_permission_storage"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about"
            />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>